# trad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: mobileapp.yml  routedb-creation.yml  scraper.yml
doc/: architecture.md  bbview_level1.drawio  bbview_level2_adapters.drawio  bbview_level2_core.drawio  bbview_level2_infrastructure.drawio  commit_guidelines.md  contextview_business.drawio  contextview_technical.drawio  crosscuttings_logging.drawio  devtools.md  external_packages.md  knowledgebase.md  requirements.md  sysarc-overview.drawio  ui-flutter.md
doc/architecture/: bbview_level1.drawio  bbview_level2_adapters.drawio  bbview_level2_core.drawio  bbview_level2_infrastructure.drawio  scraper.md  (+8 more)
mobileapp/: .gitignore  analysis_options.yaml  melos.yaml  pubspec.yaml
ota/: apiv1.php  config.inc.php  core.php  presentation.php  repository.php
scraper/: .gitignore  CHANGELOG.md  app-requirements.txt  dev-requirements.txt  pyproject.toml  python-requirements.txt  tasks.py
scraper/src/: app.py  data.sqlite  data_module.py  parser_module.py  scraper.py  sqlite_module.py
scraper/src/trad/: main.py
scraper/src/trad/adapters/: cli.py
scraper/src/trad/adapters/boundaries/: database.py  http.py
scraper/src/trad/adapters/boundaries/database/: __init__.py  common.py  query.py  structure.py
scraper/src/trad/adapters/filters/: boundaries.py  factory.py  initialization.py  optimization.py  osm.py
scraper/src/trad/adapters/filters/filling/teufelsturm/: __init__.py  parser.py
scraper/src/trad/adapters/filters/teufelsturm/: __init__.py
scraper/src/trad/adapters/pipes/: dbschema_v1.py  factory.py  schemabase.py
scraper/src/trad/adapters/pipes/db_v1/: dbschema.py  pipe.py
scraper/src/trad/application/: __init__.py  pipe.py  pipes.py
scraper/src/trad/application/boundaries/: __init__.py  database.py  grade_parser.py
scraper/src/trad/application/filters/: __init__.py  _base.py  factory.py  merge.py  osm.py
scraper/src/trad/application/filters/db_v1/: __init__.py
scraper/src/trad/application/filters/regular/: __init__.py  merge.py  validation.py
scraper/src/trad/application/filters/sink/: __init__.py  _schemabase.py
scraper/src/trad/application/filters/sink/db_v1/: __init__.py  dbschema.py
scraper/src/trad/application/filters/source/: __init__.py  osm.py  route_data_factory.py
scraper/src/trad/application/filters/source/sandsteinklettern/: __init__.py  api.py  filter.py
scraper/src/trad/application/filters/source/teufelsturm/: __init__.py  parser.py
scraper/src/trad/application/filters/teufelsturm/: __init__.py
scraper/src/trad/application/grades/: __init__.py  fuzzy.py  regex.py
scraper/src/trad/application/pipes/: factory.py  schemabase.py
scraper/src/trad/application/pipes/db_v1/: dbschema.py  pipe.py
scraper/src/trad/core/: entities.py  errors.py  usecases.py
scraper/src/trad/core/boundaries/: filters.py  pipes.py  settings.py
scraper/src/trad/core/pipe_decorators/: merge.py
scraper/src/trad/crosscuttings/: appmeta.py  di.py  errors.py  logging.py
scraper/src/trad/filters/: factory.py  finalization.py  initialization.py  optimization.py  osm.py
scraper/src/trad/filters/teufelsturm/: __init__.py  parser.py
scraper/src/trad/infrastructure/: __init__.py  cli.py  grade_regex.py  http_recorder.py  logging.py  requests.py
scraper/src/trad/infrastructure/sqlite3db/: __init__.py  statement_creator.py
scraper/src/trad/kernel/: __init__.py  appmeta.py  di.py  entities.py  errors.py  usecases.py
scraper/src/trad/kernel/boundaries/: __init__.py  filters.py  pipes.py
scraper/src/trad/kernel/entities/: __init__.py  datasources.py  geotypes.py  names.py  ranked.py  routedata.py
scraper/src/trad/kernel/pipe_decorators/: merge.py
scraper/src/trad/pipes/: factory.py  schemabase.py
scraper/src/trad/pipes/db_v1/: dbschema.py  pipe.py
scraper/test/: parser_module_tests.py
scraper/test/integration/: test_filter_dbcreation.py  test_pipe_dbcreation.py
scraper/test/trad/adapters/boundaries/database/: test_structure.py
scraper/test/trad/adapters/filters/: test_osm.py
scraper/test/trad/adapters/filters/filling/teufelsturm/: parser_test_sample.html  route_list_sample.html  test_parser.py
scraper/test/trad/adapters/filters/teufelsturm/: test_parser.py
scraper/test/trad/adapters/pipes/: test_dbv1_pipe.py
scraper/test/trad/application/: test_pipes.py
scraper/test/trad/application/filters/: test_db_v1.py  test_dbv1_pipe.py  test_merge.py  test_osm.py
scraper/test/trad/application/filters/regular/: test_merge.py  test_merge_posts.py  test_merge_routes.py  test_merge_summits.py  test_regular_filters.py  test_validation.py
scraper/test/trad/application/filters/sink/: test_db_v1.py
scraper/test/trad/application/filters/source/: test_osm.py
scraper/test/trad/application/filters/source/sandsteinklettern/: conftest.py  full_data_sample.json  minimal_data_sample.json  test_sandsteinklettern.py  test_sandsteinklettern_basics.py  test_sandsteinklettern_posts.py  test_sandsteinklettern_routes.py  test_sandsteinklettern_summits.py
scraper/test/trad/application/filters/source/teufelsturm/: route_page_sample_extended.html  summit_details_page_sample.html  test_parser.py
scraper/test/trad/application/filters/teufelsturm/: test_parser.py
scraper/test/trad/application/grades/: __init__.py  test_fuzzy.py  test_regex.py
scraper/test/trad/application/pipes/: test_dbv1_pipe.py
scraper/test/trad/core/: test_entities.py  test_usecases.py
scraper/test/trad/core/pipe_decorators/: test_merge.py
scraper/test/trad/crosscuttings/: test_di.py
scraper/test/trad/filters/: test_osm.py
scraper/test/trad/filters/teufelsturm/: test_parser.py
scraper/test/trad/infrastructure/: test_grade_regex.py  test_requests.py  test_sqlite3db.py
scraper/test/trad/kernel/: test_di.py  test_entities.py  test_usecases.py
scraper/test/trad/kernel/entities/: test_geotypes.py  test_names.py  test_ranked.py  test_routedata.py
scraper/test/trad/kernel/pipe_decorators/: test_merge.py
scraper/test/trad/pipes/: test_dbv1_pipe.py
(+177 files in other folders)
