[build-system]
requires = ["setuptools>=75.3"]
build-backend = "setuptools.build_meta"

[project]
name = "trad_scraper"
dynamic = ["version"]
description = "Route data scraper for the trad mobile application."
authors = [
  {name = "Karsten Wesenigk"},
  {name = "Thomas Wesenigk"}
]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12.7"
dependencies = [
  "beautifulsoup4",
  "pandas[html]",
  "requests",
]

[project.optional-dependencies]
dev = [
  "black",
  "invoke",
  "pytest",
  "ruff",
]

[project.urls]
Home = "https://github.com/Headbucket/trad"

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
