[build-system]
requires = ["setuptools>=75.3"]
build-backend = "setuptools.build_meta"



[project]
name = "trad_scraper"
dynamic = ["version"]
description = "Route data scraper for the trad mobile application."
authors = [
  {name = "Karsten Wesenigk"},
  {name = "Thomas Wesenigk"}
]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12.7"
dependencies = [
  "beautifulsoup4",
  "lidipy",
  "pandas[html]",
  "requests",
]


[project.optional-dependencies]
dev = [
  "invoke",
  "mypy",
  "pytest",
  "ruff",
]


[project.urls]
Home = "https://github.com/Headbucket/trad"



[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# The following settings configure the rules checked by MyPy. As with other linters, the basic idea
# is to first enable everything and only disable single errors we don't want. Further reasoning for
# this can be found after this configuration.
# Please refer tp https://mypy.readthedocs.io/en/stable/error_codes.html for information about the
# available error codes.
strict = true  # Enable strict mode
disable_error_code = "type-abstract"

# Reasoning and rationales for the disabled error codes:

# type-abstract: Disabled because it prohibits returning abstract instances of a given abstract type
#   from functions (what we heavily do when using `trad.crosscuttings.di.DependencyProvider`) due to
#   a MyPy error: https://github.com/python/mypy/issues/4717
#   May be re-enabled once this issues is fixed.


# Override some settings for external packages to avoid issues them
[[tool.mypy.overrides]]
module = "lidipy"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "invoke"
implicit_reexport = true



[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4


[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# The following settings configure the rules checked by the ruff linter. The idea is to initially
# enable everything and only disable single rules/categories as necessary. The 'ignore' setting
# shall preferably contain concrete rule codes, but may also disable whole categories of course.
# When ignoring rules, please document the reason/motivation. Keep the rules sorted by their
# categories.
# Please see https://docs.astral.sh/ruff/rules/ for a full list of available rules and categories.
#
select = ["ALL"]

ignore = [
  # Disable all flake8-annotations rules because they are checked by MyPy later on (aren't they?)
  "ANN",

  # Disable most of the pydocstyle (D) rules because we don't want to enforce too much docstring
  # content and style. We mainly want to ensure that there are docstrings at all.
  "D105",  # Missing docstring in magic method
  "D200",  # One-line docstring should fit on one line
  "D203",  # 1 blank line required before class docstring
  "D205",  # 1 blank line required between summary line and description
  "D210",  # No whitespaces allowed surrounding docstring text
  "D212",  # Multi-line docstring summary should start at the first line 
  "D213",  # Multi-line docstring summary should start at the second line
  "D214",  # Section is over-indented
  "D215",  # Section underline is over-indented
  "D400",  # First line should end with a period
  "D401",  # First line of docstring should be in imperative mood
  "D403",  # First word of the first line should be capitalized
  "D404",  # First word of the docstring should not be "This"
  "D405",  # Section name should be properly capitalized
  "D406",  # Section name should end with a newline
  "D407",  # Missing dashed underline after section
  "D408",  # Section underline should be in the line following the section's name
  "D409",  # Section underline should match the length of its name
  "D410",  # Missing blank line after section
  "D411",  # Missing blank line before section
  "D412",  # No blank lines allowed between a section header and its content
  "D413",  # Missing blank line after last section
  "D414",  # Section has no content
  "D415",  # First line should end with a period, question mark, or exclamation point
  "D416",  # Section name should end with a colon 

  # Line length is controlled by the formatter which may produce longer lines in some cases. So
  # we disable the hard check during linting.
  "E501",  # Line too long

  # Disable the "traceback beautification" rules from flake8-errmsg, because we don't consider them
  # being such a thing.
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "EM103",  # Exception must not use a .format() string directly, assign to variable first

  # Do not ban implicit namespace packages, because it's unclear why they are bad.
  "INP001",  # File is part of an implicit namespace package. Add an __init__.py.

  # We don't want to create issues for every single TODO.
  "TD003",  # TODO: this link has no issue

  # Disabled because we don't want to enforce many specialized exception classes just for different
  # messages for now.
  "TRY003",  # Avoid specifying long messages outside the exception class

  # Disabled because specifying the open mode makes it more explicit, more robust against (though
  # very unlike) future changes to the default values and doesn't cause any harm.
  "UP015",  # Unnecessary open mode parameters

  # The following rules conflict with the ruff/black formatting style, so they must be disabled as
  # recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",  # tab-indentation
  "E111",  # indentation-with-invalid-multiple
  "E114",  # indentation-with-invalid-multiple-comment
  "E117",  # over-indented
  "D206",  # indent-with-spaces
  "D300",  # triple-single-quotes
  "Q000",  # bad-quotes-inline-string
  "Q001",  # bad-quotes-multiline-string
  "Q002",  # bad-quotes-docstring
  "Q003",  # avoidable-escaped-quote
  "COM812",  # missing-trailing-comma
  "COM819",  # prohibited-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
  "ISC002",  # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
# Disable some rules for unit tests
"test/*" = [
  # Don't enforce most docstrings for unit tests. But if they are there, all usual rules still apply.
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D106",  # Missing docstring in public nested class
  "D107",  # Missing docstring in __init__

  # Of course, 'assert's must be allowed in unit tests
  "S101",  # Use of `assert` detected
]

# Disable some rules for the tasks.py (Invoke scripts)
"tasks.py" = [
  # print is allowed here because Invoke scripts may have to write to stdout.
  "T201",  # `print` found
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
