[build-system]
requires = ["setuptools>=75.3"]
build-backend = "setuptools.build_meta"



[project]
name = "trad_scraper"
dynamic = ["version"]
description = "Route data scraper for the trad mobile application."
authors = [
  {name = "Karsten Wesenigk"},
  {name = "Thomas Wesenigk"}
]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12.7"
dependencies = [
  "beautifulsoup4",
  "lidipy",
  "pandas[html]",
  "requests",
]


[project.optional-dependencies]
dev = [
  "coverage",
  "invoke",
  "mypy",
  "pandas-stubs",
  "pylint",
  "pylint-pytest",
  "pylint-restricted-imports",
  "pytest",
  "ruff",
  "types-beautifulsoup4",
  "types-requests",
]


[project.urls]
Home = "https://github.com/Headbucket/trad"



[tool.coverage.run]
dynamic_context = "test_function"
omit = [
  "test/*",
]


[tool.coverage.html]
show_contexts = true
title = "trad.scraper Code Coverage Report"
directory = "coverage/report"



[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# The following settings configure the rules checked by MyPy. As with other linters, the basic idea
# is to first enable everything and only disable single errors we don't want. Further reasoning for
# this can be found after this configuration.
# Please refer tp https://mypy.readthedocs.io/en/stable/error_codes.html for information about the
# available error codes.
strict = true  # Enable strict mode
warn_unused_ignores = true
warn_redundant_casts = true

# Enable additional error codes that seem to be not included in 'strict'
enable_error_code = ["ignore-without-code"]

# Disabled error codes:
disable_error_code = "type-abstract"

# Reasoning and rationales for the disabled error codes:

# type-abstract: Disabled because it prohibits returning abstract instances of a given abstract type
#   from functions (what we heavily do when using `trad.crosscuttings.di.DependencyProvider`) due to
#   a MyPy error: https://github.com/python/mypy/issues/4717
#   May be re-enabled once this issues is fixed.


# Override some settings for external packages to avoid issues from them
[[tool.mypy.overrides]]
module = "lidipy"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "invoke"
implicit_reexport = true



[tool.pylint.main]
# Pylint linter configuration. As with other linters, the basic idea is to first enable everything
# and only disable checkers/rules/plugins that we don't want for some reason.

# List of plugins (as comma separated values of python module names) to load,
# usually to register additional checkers.
load-plugins = [
  # Enable all "internal" (i.e. deployed with pylint) extensions
  "pylint.extensions.bad_builtin",
  "pylint.extensions.broad_try_clause",
  "pylint.extensions.check_elif",
  "pylint.extensions.code_style",
  "pylint.extensions.comparison_placement",
  "pylint.extensions.confusing_elif",
  "pylint.extensions.consider_refactoring_into_while_condition",
  "pylint.extensions.consider_ternary_expression",
  "pylint.extensions.dict_init_mutate",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.dunder",
  "pylint.extensions.empty_comment",
  "pylint.extensions.eq_without_hash",
  "pylint.extensions.for_any_all",
  "pylint.extensions.magic_value",
  "pylint.extensions.mccabe",
  "pylint.extensions.no_self_use",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.private_import",
  "pylint.extensions.redefined_loop_name",
  "pylint.extensions.redefined_variable_type",
  "pylint.extensions.set_membership",
  "pylint.extensions.typing",
  "pylint.extensions.while_used",

  # Plugin to restrict imports: https://github.com/pexip/pylint-restricted-imports
  "pylint_restricted_imports",

  # Plugin to avoid some false positives in test code: https://github.com/reverbc/pylint-pytest
  "pylint_pytest",
]


[tool.pylint."messages control"]
# Only show warnings with the listed confidence levels. Leave empty to show all.
# Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]

# The 'disable' and 'enable' settings configure the rules checked by PyLint.
# categories.
disable = [

  # Disabled because a class (even with only one member) is often more flexible
  # for future extension (i.e., if a second method is needed, the class can simply be extended while
  # a function needs to be refactored). But of course it's also not forbidden to simply use a
  # function if that's really all we want in a certain situation.
  "too-few-public-methods",

  # Disabled because blindly following this rule may cause hard to find problems and also can make
  # the code less explicit. It is also disabled by default for this reason.
  "use-implicit-booleaness-not-comparison-to-string",

  # Disabled because blindly following this rule may cause hard to find problems and also can make
  # the code less explicit. It is also disabled by default for this reason.
  "use-implicit-booleaness-not-comparison-to-zero",

  # Disabled because it essentially forbids the usage of while loops, which we don't consider a
  # great benefit.
  "while-used",


  # Disable most docstring checkers because we dont't want to enforce too much of their content and
  # style. See also the "pydocstyle" comment at the ruff config.
  "missing-param-doc",

  # Disable all rules that are checked by ruff or mypy, to avoid unnecessary double checks
  # Comparison table: https://github.com/astral-sh/ruff/issues/970
  # Last checked: 2024-12-15
  "assigning-non-slot",
  "await-outside-async",
  "bad-format-character",
  "bad-str-strip-call",
  "bad-string-format-type",
  "bidirectional-unicode",
  "continue-in-finally",
  "duplicate-bases",
  "format-needs-mapping",
  "function-redefined",
  "init-is-generator",
  "invalid-all-format",
  "invalid-all-object",
  "invalid-bool-returned",
  "invalid-bytes-returned",
  "invalid-character-backspace",
  "invalid-character-esc",
  "invalid-character-nul",
  "invalid-character-sub",
  "invalid-character-zero-width-space",
  "invalid-hash-returned",
  "invalid-index-returned",
  "invalid-length-returned",
  "logging-too-few-args",
  "logging-too-many-args",
  "misplaced-bare-raise",
  "missing-format-string-key",
  "mixed-format-string",
  "modified-iterating-set",
  "no-self-argument",
  "nonexistent-operator",
  "nonlocal-and-global",
  "nonlocal-without-binding",
  "not-in-loop",
  "notimplemented-raised",
  "potential-index-error",
  "relative-beyond-top-level",
  "repeated-keyword",
  "return-in-init",
  "return-outside-function",
  "singledispatch-method",
  "singledispatchmethod-function",
  "syntax-error",
  "too-few-format-args",
  "too-many-format-args",
  "too-many-star-expressions",
  "truncated-format-string",
  "undefined-all-variable",
  "undefined-variable",
  "unexpected-special-method-signature",
  "used-prior-global-declaration",
  "yield-inside-async-function",
  "yield-outside-function",
  "anomalous-backslash-in-string",
  "assert-on-string-literal",
  "assert-on-tuple",
  "bad-dunder-name",
  "bad-format-string",
  "bad-open-mode",
  "bad-staticmethod-argument",
  "bare-except",
  "binary-op-exception",
  "broad-exception-caught",
  "broad-exception-raised",
  "cell-var-from-loop",
  "consider-ternary-expression",
  "dangerous-default-value",
  "duplicate-except",
  "duplicate-key",
  "duplicate-value",
  "eq-without-hash",
  "eval-used",
  "exec-used",
  "expression-not-assigned",
  "f-string-without-interpolation",
  "fixme",
  "forgotten-debug-statement",
  "format-combined-specification",
  "format-string-without-interpolation",
  "global-at-module-level",
  "global-statement",
  "global-variable-not-assigned",
  "implicit-str-concat",
  "import-self",
  "inconsistent-quotes",
  "invalid-envvar-default",
  "keyword-arg-before-vararg",
  "logging-format-interpolation",
  "logging-fstring-interpolation",
  "logging-not-lazy",
  "lost-exception",
  "method-cache-max-size-none",
  "misplaced-future",
  "missing-format-argument-key",
  "named-expr-without-context",
  "nan-comparison",
  "nested-min-max",
  "non-ascii-file-name",
  "pointless-exception-statement",
  "pointless-statement",
  "protected-access",
  "raise-missing-from",
  "redefined-builtin",
  "redefined-loop-name",
  "redundant-u-string-prefix",
  "reimported",
  "self-assigning-variable",
  "subprocess-popen-preexec-fn",
  "subprocess-run-check",
  "super-without-brackets",
  "try-except-raise",
  "unnecessary-lambda",
  "unnecessary-pass",
  "unnecessary-semicolon",
  "unspecified-encoding",
  "unused-argument",
  "unused-format-string-argument",
  "unused-format-string-key",
  "unused-import",
  "unused-variable",
  "useless-else-on-loop",
  "useless-with-lock",
  "wildcard-import",
  "bad-classmethod-argument",
  "bad-docstring-quotes",
  "compare-to-empty-string",
  "consider-iterating-dictionary",
  "consider-using-any-or-all",
  "consider-using-dict-items",
  "docstring-first-line-empty",
  "empty-docstring",
  "import-outside-toplevel",
  "import-private-name",
  "invalid-name",
  "line-too-long",
  "misplaced-comparison-constant",
  "missing-class-docstring",
  "missing-final-newline",
  "missing-function-docstring",
  "missing-module-docstring",
  "multiple-imports",
  "multiple-statements",
  "non-ascii-module-import",
  "non-ascii-name",
  "single-string-used-for-slots",
  "singleton-comparison",
  "trailing-newlines",
  "trailing-whitespace",
  "typevar-double-variance",
  "typevar-name-incorrect-variance",
  "typevar-name-mismatch",
  "ungrouped-imports",
  "unidiomatic-typecheck",
  "unnecessary-direct-lambda-call",
  "unnecessary-dunder-call",
  "unnecessary-lambda-assignment",
  "unneeded-not",
  "use-implicit-booleaness-not-len",
  "use-sequence-for-iteration",
  "useless-import-alias",
  "wrong-import-order",
  "wrong-import-position",
  "comparison-of-constants",
  "comparison-with-itself",
  "consider-alternative-union-syntax",
  "consider-merging-isinstance",
  "consider-using-alias",
  "consider-using-augmented-assign",
  "consider-using-dict-comprehension",
  "consider-using-from-import",
  "consider-using-generator",
  "consider-using-get",
  "consider-using-in",
  "consider-using-min-builtin",
  "consider-using-max-builtin",
  "consider-using-set-comprehension",
  "consider-using-sys-exit",
  "consider-using-with",
  "else-if-used",
  "empty-comment",
  "inconsistent-return-statements",
  "literal-comparison",
  "magic-value-comparison",
  "no-classmethod-decorator",
  "no-else-break",
  "no-else-continue",
  "no-else-raise",
  "no-else-return",
  "no-self-use",
  "no-staticmethod-decorator",
  "property-with-parameters",
  "redefined-argument-from-local",
  "simplifiable-if-expression",
  "simplifiable-if-statement",
  "super-with-arguments",
  "too-complex",
  "too-many-arguments",
  "too-many-boolean-expressions",
  "too-many-branches",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "trailing-comma-tuple",
  "unnecessary-comprehension",
  "unnecessary-dict-index-lookup",
  "unnecessary-list-index-lookup",
  "use-a-generator",
  "use-dict-literal",
  "use-list-literal",
  "use-set-for-membership",
  "useless-object-inheritance",
  "useless-return",
]

enable = [
  "all",
  # Explicitly enable the rules from the restricted-import plugin
  "E6901",
  "E6902",
]

[tool.pylint."restricted import"]
# Configuration of the "pylint_restricted_imports" plugin

# Check restricted imports recursively
restricted-import-recurse=true

# Colon/semicolon-delimited sets of names that determine what modules are
# allowed to be imported from another module
# "trad.a:trad.r1;trad.r2" means: trad.a must not import trad.r1 or trad.r2"
restricted-imports=[
  # Restrictions derived from the Clean Architecture Pattern:
  "trad.crosscuttings:trad.core;trad.adapters;trad.infrastructure;trad.main",
  "trad.core:trad.adapters;trad.infrastructure;trad.main",
  "trad.adapters:trad.infrastructure;trad.main",
  "trad.infrastructure:trad.main;trad.core",

  # Restrictions derived from the Pipes-and-Filters Pattern within trad.adapters:
  "trad.adapters.filters:trad.adapters.pipes",
  "trad.adapters.pipes:trad.adapters.filters",
]



[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4


[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# The following settings configure the rules checked by the ruff linter. The idea is to initially
# enable everything and only disable single rules/categories as necessary. The 'ignore' setting
# shall preferably contain concrete rule codes, but may also disable whole categories of course.
# When ignoring rules, please document the reason/motivation. Keep the rules sorted by their
# categories.
# Please see https://docs.astral.sh/ruff/rules/ for a full list of available rules and categories.
#
select = ["ALL"]

ignore = [
  # Disable all flake8-annotations rules because they are checked by MyPy later on (aren't they?)
  "ANN",

  # Disable most of the pydocstyle (D) rules because we don't want to enforce too much docstring
  # content and style. We mainly want to ensure that there are docstrings at all.
  "D105",  # Missing docstring in magic method
  "D200",  # One-line docstring should fit on one line
  "D203",  # 1 blank line required before class docstring
  "D205",  # 1 blank line required between summary line and description
  "D210",  # No whitespaces allowed surrounding docstring text
  "D212",  # Multi-line docstring summary should start at the first line 
  "D213",  # Multi-line docstring summary should start at the second line
  "D214",  # Section is over-indented
  "D215",  # Section underline is over-indented
  "D400",  # First line should end with a period
  "D401",  # First line of docstring should be in imperative mood
  "D403",  # First word of the first line should be capitalized
  "D404",  # First word of the docstring should not be "This"
  "D405",  # Section name should be properly capitalized
  "D406",  # Section name should end with a newline
  "D407",  # Missing dashed underline after section
  "D408",  # Section underline should be in the line following the section's name
  "D409",  # Section underline should match the length of its name
  "D410",  # Missing blank line after section
  "D411",  # Missing blank line before section
  "D412",  # No blank lines allowed between a section header and its content
  "D413",  # Missing blank line after last section
  "D414",  # Section has no content
  "D415",  # First line should end with a period, question mark, or exclamation point
  "D416",  # Section name should end with a colon 

  # Disabled because some external data sources (e.g. teufelsturm.de and sandsteinklettern.de) do
  # not provide time zone information for e.g. the post dates, so we indeed have to parse them into
  # naive objects in most cases.
  "DTZ007",  # Naive datetime constructed using `datetime.datetime.strptime()` without %z

  # Line length is controlled by the formatter which may produce longer lines in some cases. So
  # we disable the hard check during linting.
  "E501",  # Line too long

  # Disable the "traceback beautification" rules from flake8-errmsg, because we don't consider them
  # being such a thing.
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "EM103",  # Exception must not use a .format() string directly, assign to variable first

  # Do not ban implicit namespace packages, because it's unclear why they are bad.
  "INP001",  # File is part of an implicit namespace package. Add an __init__.py.

  # Disabled because it is falsely triggered a lot for the statement creation code, which creates
  # SQL statements dynamically, inserting e.g. table and column names as well as WHERE conditions
  # with string operations.
  # The danger of SQL injection errors is limited because data taken from external sources never
  # goes into such strings directly, and we always use hard coded constants for e.g. entity names.
  # Furthermore, the scraper is always writing to a newly created database, so the biggest harm an
  # attacker could cause would be a broken or unusable database file.
  "S608",  # Possible SQL injection vector through string-based query construction

  # We don't want to create issues for every single TODO.
  "TD003",  # TODO: this link has no issue

  # Disabled because we don't want to enforce many specialized exception classes just for different
  # messages for now.
  "TRY003",  # Avoid specifying long messages outside the exception class

  # Disabled because specifying the open mode makes it more explicit, more robust against (though
  # very unlike) future changes to the default values and doesn't cause any harm.
  "UP015",  # Unnecessary open mode parameters

  # The following rules conflict with the ruff/black formatting style, so they must be disabled as
  # recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",  # tab-indentation
  "E111",  # indentation-with-invalid-multiple
  "E114",  # indentation-with-invalid-multiple-comment
  "E117",  # over-indented
  "D206",  # indent-with-spaces
  "D300",  # triple-single-quotes
  "Q000",  # bad-quotes-inline-string
  "Q001",  # bad-quotes-multiline-string
  "Q002",  # bad-quotes-docstring
  "Q003",  # avoidable-escaped-quote
  "COM812",  # missing-trailing-comma
  "COM819",  # prohibited-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
  "ISC002",  # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
# Disable some rules for unit tests
"test/*" = [
  # Don't enforce most docstrings for unit tests. But if they are there, all usual rules still apply.
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D106",  # Missing docstring in public nested class
  "D107",  # Missing docstring in __init__

  # Of course, 'assert's must be allowed in unit tests
  "S101",  # Use of `assert` detected
]

# Disable some rules for the tasks.py (Invoke scripts)
"tasks.py" = [
  # print is allowed here because Invoke scripts may have to write to stdout.
  "T201",  # `print` found
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
